# cycloid-mcp-server

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mcp-examples.md  pyproject.toml  server.json  server.py
.cursor/rules/: core-development.mdc  cycloid-mcp-components.md  cycloid-mcp-components.mdc  fastmcp-bestpractices.mdc  global-development.md  pyright.mdc  python.mdc
.github/workflows/: docker-build.yml  pr-quality-check.yml
docs/: README.md  catalog_handler.md  stack_create_from_blueprint.md
scripts/: install_cli.sh  organize_imports.py  simulate-ci.sh  test-ci.sh
src/: __init__.py  base_handler.py  cli.py  cli_mixin.py  component_registry.py  config.py  dependencies.py  display_hints.py  error_handling.py  error_monitoring.py  exceptions.py  http_cli_mixin.py  http_config.py  template_loader.py  types.py  version.py
src/components/: __init__.py  catalogs.py  components.py  events.py  members.py  pipelines.py  projects.py  stackforms.py  stacks.py
src/components/catalogs/: __init__.py  catalogs_handler.py  catalogs_resources.py  catalogs_tools.py
src/components/events/: __init__.py  events_handler.py  events_resources.py  events_tools.py
src/components/pipelines/: __init__.py  pipelines_handler.py  pipelines_resources.py  pipelines_tools.py
src/components/stacks/: __init__.py  constants.py  stackforms_handler.py  stackforms_tools.py  stacks_handler.py  stacks_resources.py  stacks_tools.py
src/handlers/: __init__.py  catalog_handler.py  stack_handler.py
src/templates/: elicitation_fallback.md  stack_creation_guidance.md
tests/: conftest.py  test_catalog_component.py  test_cli.py  test_cli_mixin.py  test_component_registry.py  test_components_component.py  test_config.py  test_error_handling.py  test_event_component.py  test_http_cli_mixin.py  test_http_config.py  test_http_server_simple.py  test_member_component.py  test_pipeline_component.py  test_pipeline_handler.py  test_pipeline_integration.py  test_pipeline_resources.py  test_pipeline_tools.py  test_projects_component.py  test_server_integration.py  test_stack_component.py  test_version.py
